update software services card

--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
       </div>
       <div class="service-card">
         <h3>Software Services</h3>
-        <p>Comprehensive online software services including development, maintenance, and digital transformation
-          solutions.</p>
+        <p>We create and operate online software services that provide value through digital products and experiences.
+          From educational testing platforms to digital asset marketplaces, we build and maintain services that generate
+          revenue through user subscriptions and pay-per-use models.</p>
       </div>
     </div>
   </div>
